# ai-tools

./: .gitignore  App.tsx  Makefile  README.md  metadata.json  pyproject.toml  test.go
.cursor/dev_command/: workflow.md
.cursor/rules/: general_best_practices.mdc  python_dependency.mdc  test_case.mdc
be/: .mockery.yaml  Makefile  go.mod  go.sum
be/.cursor/dev_command/: workflow.md
be/baml_src/: generators.baml  social_post_classify.baml
be/cmd/: all_handlers.go  main.go
be/docs/: docs.go  swagger.json  swagger.yaml
be/internal/mocks/: mock_ContextualLinkRepositoryInterface.go  mock_DifyServiceInterface.go
be/internal/pkg/: http_request.go  logger.go  response_format.go
be/sql/: create_facebook_posts_table.sql  create_vector_table.sql
be/tests/: apify_integration_test.go
components/: Background.tsx  ResultCard.tsx
services/: geminiService.ts
src/models/: llm_model.py  setting.py
src/services/: llm.py
tests/integration/: test_llm.py
tests/unit_test/: test_llm.py
ui/: IMPLEMENTATION_SUMMARY.md  README.md  app.py  config.py  index.html  package-lock.json  package.json  pyproject.toml  test_file.ts  types.ts  vite.config.ts
ui/.cursor/dev_command/: workflow.md
ui/.cursor/dev_command/command/: code_review.md  plan_feature.md  write_docs.md
ui/.cursor/rules/: mermaid_chart.mdc
ui/.streamlit/: config.toml
ui/components/: __init__.py  content_blocks.py  link_tool.py  sidebar.py
ui/services/: __init__.py  api_service.py  geminiService.ts
ui/task_docs/features/: 0001_main-ui-layout_PLAN.md
ui/utils/: __init__.py  helpers.py
(+15 files in other folders)
