[project]
name = "nlp-tools"
version = "0.1.0"
description = ""
authors = [
    {name = "Tho Nguyen"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai (>=2.8.1,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pytest (>=9.0.1,<10.0.0)"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-mock>=3.12.0,<4.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
